<resources>
    <string name="app_name">ShadiHall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_tree">Tree View</string>
    <string name="action_list">List View</string>
    <string name="map">Map</string>
    <string name="login">Login</string>
    <string name="enter_owner_number">Owner Mobile Number</string>
    <string name="enter_user_number">User Mobile Number</string>
    <string name="enter_password">Password</string>
    <string name="actionbar_spinner">Actionbar Spinner</string>
    <string name="menu_thumbnail">Menu thumbnail</string>
    <string name="title_activity_detail_calendar">DetailCalendarActivity</string>
    <string name="create_account">Create account</string>
    <string name="c_name">Business Name*</string>
    <string name="c_address">Business Address</string>
    <string name="name_of_person">AdminUserName</string>
    <string name="country">Country</string>
    <string name="password">Password*</string>
    <string name="c_number">Business Number</string>
    <string name="login_number">LoginMobileNo</string>
    <string name="contact_num">Contact number</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="user_location">User location</string>
    <string name="register">Register</string>
    <string name="city">City</string>
    <string name="sub_city">Sub City</string>
    <string name="capacity_of_persons">Capacity Of Persons</string>
    <string name="error_message_c_address">Enter Address</string>
    <string name="error_message_c_name">Enter Company Name</string>
    <string name="error_message_name_of_person">Enter Person Name</string>
    <string name="error_message_country">Enter Country</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_c_number">Enter Company Number</string>
    <string name="error_message_login_number">Enter Login Number</string>
    <string name="error_message_city">Enter City</string>
    <string name="error_message_sub_city">Enter Sub City</string>
    <string name="error_message_persons">Enter Persons</string>
    <string name="error_message_website">Enter Website</string>
    <string name="error_message_email">Enter Email</string>
    <string name="error_message_description">Enter Email</string>
    <string name="error_message_salary">Enter Salary</string>
    <string name="sp_country">Select Country</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="error_message_phone">Enter Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp">Resend otp</string>
    <string name="error_message_otp">Enter OTP</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_location">Set GPS Location</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_sms_settings">SMS Setting</string>
    <string name="add_event">Add Event</string>
    <string name="address">Address</string>
    <string name="client_mobile_no">Client Mobile No</string>
    <string name="cnic">CNIC Number</string>
    <string name="total_charges">Total Charges</string>
    <string name="event_name">Event Name</string>
    <string name="total_persons">Total Persons</string>
    <string name="advance_fee">Advance Fee</string>
    <string name="description">Business Description</string>
    <string name="booking_date">Booking Date</string>
    <string name="event_date">Event Date</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="credit_account">Credit Account</string>
    <string name="debit_account">Debit Account</string>
    <string name="add">Add</string>

    <string name="date">Date</string>
    <string name="Recieved">Recieved</string>
    <string name="expensed">Expensed</string>
    <string name="balance">Balance</string>
    <string name="profit">Profit</string>
    <string name="client_name">Client Name</string>
    <string name="error_message_amount">Enter Amount</string>
    <string name="edit">Edit</string>
    <string name="account_type">Account Type</string>
    <string name="account_group">Account Group</string>
    <string name="account_name">Account Name</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="debit_bal">Debit Bal</string>
    <string name="credit_bal">Credit Bal</string>
    <string name="ac_name">Ac Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_salary">Enter Your Salary</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="user_name">User Name</string>
    <string name="amount">Amount</string>
    <string name="remarks">Remarks</string>
    <string name="total">Total</string>
    <string name="actypename">AcType</string>
    <string name="acgruopname">AcGruop</string>
    <string name="cb_date">CB Date</string>
    <string name="capital">Capital</string>
    <string name="profitloss">ProfitLoss</string>
    <string name="liabilities">Liabilities</string>
    <string name="c_p_l">C + P + L</string>
    <string name="assets">Assets</string>
    <string name="sorting">Sorting</string>
    <string name="month">Month</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="cashbook_id">CashBook ID</string>
    <string name="client_id">Client ID</string>
    <string name="entry_no">Entry No</string>
    <string name="selectedac">SelectedAc</string>
    <string name="againstac">AgainstAc</string>
    <string name="particulars">Particulars</string>
    <string name="entry_of">Entry Of</string>
    <string name="cb_id">CB ID</string>
    <string name="settings">Settings</string>
    <string name="export_pdf">Export PDF</string>
    <string name="title_activity_cash_book_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="print">Print</string>

    <string name="action">Action</string>

    <!-- Example settings for Notifications -->
    <string name="previous_debit">PrvDebit</string>

    <string name="previous_credit">PrvCredit</string>

    <string name="tradebit">TraDebit</string>
    <string name="tracredit">TraCredit</string>

    <string name="closingdebit">ClosingDebit</string>
    <string name="closingcredit">ClosingCredit</string>
    <string name="transaction">Transaction</string>
    <string name="select_account">Select Account</string>
    <string name="update">Update</string>
    <string name="title_activity_get_shadi_hall_location">Map</string>
    <string name="gps_network_not_enabled">GPS Network Not Enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_booking_shift">Select Booking Shift</string>
    <string name="event_shift">Event Shift</string>
    <string name="bookingid">BookingID</string>
    <string name="financial_year">Financial Year</string>
    <string name="salepurnumber">No</string>
    <string name="salepurdata">Date</string>
    <string name="salepuracname">AccountName</string>
    <string name="salepurremarks">ReMarks</string>
    <string name="salepurbillamount">BillAmount</string>
    <string name="enter_your_remarks">Remarks</string>
    <string name="add_invoice">Add new Invoice</string>
    <string name="enter_name_of_person">Enter Name of person</string>
    <string name="enter_days_left">Payment After Days</string>
    <string name="Item_group">Item Group</string>
    <string name="Item_name">Item Name</string>
    <string name="Item_price">Price</string>
    <string name="Item_stock">Stock</string>
    <string name="login_information">Login information</string>
    <string name="Open" >Open</string>
    <string name="Close">Close</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Sale Pur Table Cloumn Headings -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
</resources>
