<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/footer"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/col1no"
                android:textAlignment="center"
                android:textSize="@dimen/textSize"
                android:textColor="@android:color/black"
                android:layout_margin="3dp"
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="wrap_content"
                android:text="@string/salepurnumber"/>
            <TextView
                android:id="@+id/col2date"
                android:textAlignment="center"
                android:textSize="@dimen/textSize"
                android:textColor="@android:color/black"
                android:layout_margin="3dp"
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="wrap_content"
                android:text="@string/salepurdata"/>
            <TextView
                android:id="@+id/col3acname"
                android:textAlignment="center"
                android:textSize="@dimen/textSize"
                android:textColor="@android:color/black"
                android:layout_margin="3dp"
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="wrap_content"
                android:text="@string/salepuracname"/>

            <TextView
                android:id="@+id/col4remark"
                android:textAlignment="center"
                android:textSize="@dimen/textSize"
                android:textColor="@android:color/black"

                android:layout_margin="3dp"
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="wrap_content"
                android:text="@string/salepurremarks"/>
            <TextView
                android:id="@+id/col5billamnt"
                android:textAlignment="center"
                android:textSize="@dimen/textSize"
                android:textColor="@android:color/black"
                android:layout_margin="3dp"
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="wrap_content"
                android:text="@string/salepurbillamount"/>
        </LinearLayout>
<View
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="2dp"/>
</LinearLayout>