<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RecoveryFragment">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:measureAllChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/footer"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"/>

                <TextView
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name"/>

                <TextView
                    android:id="@+id/cre_total"
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="wrap_content"
                    android:text="@string/client_name"/>

                <TextView
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_charges"/>
                <TextView
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Recieved"/>
                <ImageButton
                    android:id="@+id/add"
                    android:background="@android:color/transparent"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expensed"/>
                <ImageButton
                    android:id="@+id/add_expense"
                    android:background="@android:color/transparent"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"/>
                <TextView
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_margin="3dp"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profit"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>