<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BookingFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/twenty_dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/date_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/booking_date"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:maxLines="1"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/booking_date"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:maxLines="1" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/event_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/event_date"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/event_date"-->
                <!--android:inputType="text"-->
                <!--android:maxLines="1" />-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/event_date"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:maxLines="1"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:id="@+id/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/booking_date"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:maxLines="1" />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_of_person_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_of_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_of_person"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/client_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/client_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_mobile_no"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cnic_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cnic_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cnic"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/total_charges_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
        android:id="@+id/total_charges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_charges"
        android:inputType="number"
        android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
        android:id="@+id/event_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:inputType="text"
        android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/total_persons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
        android:id="@+id/total_persons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_persons"
        android:inputType="number"
        android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/advance_fee_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/advance_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/advance_fee"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textShortMessage"
                android:maxLines="4" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_marginTop="5dp"
            android:id="@+id/add"
            android:text="@string/add_event"
            android:textAllCaps="false"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>